--- a/flutter_quill_extensions/pubspec.yaml
+++ b/flutter_quill_extensions/pubspec.yaml
@@ -1,8 +1,8 @@
 name: flutter_quill_extensions
 description: Embed extensions for flutter_quill including image, video, formula and etc.
 version: 0.3.3
-homepage: https://bulletjournal.us/home/index.html
-repository: https://github.com/singerdmx/flutter-quill/tree/master/flutter_quill_extensions
+publish_to: none
+
 
 environment:
   sdk: ">=2.17.0 <4.0.0"
@@ -12,7 +12,10 @@ dependencies:
   flutter:
     sdk: flutter
 
-  flutter_quill: ../
+  flutter_quill:
+    git:
+      url: git@github.com:hungryemon/flutter-quill.git
+      ref: 4bd3bc325b3dea4cc0d2d9116436c86004bc2722
 
   image_picker: ^0.8.5+3
   photo_view: ^0.14.0
