--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -1,8 +1,7 @@
 name: flutter_quill
 description: A rich text editor built for the modern Android, iOS, web and desktop platforms. It is the WYSIWYG editor and a Quill component for Flutter.
 version: 7.4.3
-homepage: https://1o24bbs.com/c/bulletjournal/108
-repository: https://github.com/singerdmx/flutter-quill
+publish_to: none
 
 environment:
   sdk: ">=2.17.0 <4.0.0"
