--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -10,17 +10,17 @@ environment:
 dependencies:
   flutter:
     sdk: flutter
-  collection: ^1.17.0
+  collection: ^1.18.0
   flutter_colorpicker: ^1.0.3
   flutter_keyboard_visibility: ^5.4.1
   quiver: ^3.2.1
-  url_launcher: ^6.1.12
-  pedantic: ^1.11.1
+  url_launcher: ^6.2.2
+  lints: ^3.0.0
   characters: ^1.3.0
   diff_match_patch: ^0.4.1
-  i18n_extension: ^9.0.2
-  device_info_plus: ^9.0.3
-  platform: ^3.1.0
+  i18n_extension: ^10.0.1
+  device_info_plus: ^9.1.1
+  platform: ^3.1.3
   pasteboard: ^0.2.0
 
   # Dependencies for testing utilities
