fix: update gallery saver

--- a/flutter_quill_extensions/pubspec.yaml
+++ b/flutter_quill_extensions/pubspec.yaml
@@ -24,7 +24,8 @@ dependencies:
   # video_player: ^2.4.2
   # youtube_player_flutter: ^8.1.2
 
-  gallery_saver_plus: ^3.0.1
+  gallery_saver: #^3.0.1
+   git: git@github.com:hungryemon/gallery_saver.git
   math_keyboard: ">=0.1.8 <0.3.0"
   string_validator: ^1.0.2
   universal_html: ^2.2.4
